<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.musicians.MusicianFragment"
    app:navGraph="@navigation/nav_graph">

    <LinearLayout
        android:id="@+id/parentLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/musicianTitleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/open_sans_semibold"
            android:text="@string/musicians_title"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextSearchMusician"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:drawablePadding="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/buscar_hint"
            android:padding="8dp" />

        <Button
            android:id="@+id/buttonOrderMusicians"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="A-Z"
            android:textColor="@color/white"
            android:fontFamily="@font/open_sans_semibold"
            android:textSize="14sp">

        </Button>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_musicians"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager" />


    </LinearLayout>

</FrameLayout>