<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/baseline_music_note_24"
        android:title="@string/title_albumes" />

    <item
        android:id="@+id/navigation_musician"
        android:icon="@drawable/baseline_person_2_24"
        android:title="@string/title_artistas" />

    <item
        android:id="@+id/navigation_collectors"
        android:icon="@drawable/baseline_groups_2_24"
        android:title="@string/title_coleccionistas" />

</menu>