<resources>
    <string name="app_name">Vinilos</string>
    <string name="title_albumes">Álbumes</string>
    <string name="title_artistas">Artistas</string>
    <string name="title_coleccionistas">Coleccionistas</string>
    <string name="great">¡Genial!</string>
    <string name="newAlbum">Nuevo Álbum</string>
    <string name="allAlbums">Todos los Álbumes </string>
    <string name="title_activity_album_details">Detalle del álbum</string>
    <string name="title_activity_artist_details">Detalle del artista</string>
...
